--- a/TestWork/appsettings.json
+++ b/TestWork/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "testwork": "Host=127.0.0.1;Port=5432;Database=postgres;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=postgres;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
